Add all important information for the recipe
Description section describes how this recipe appeared, Ingredients and Steps sections will help people to cook the same lasagna. Also added link to the Home Page to make navigation more comfortable.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,51 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167347559762620230110_193320.jpg&q=60&c=sc&orient=true&poi=auto&h=512"alt="Photo of Lasagna">
+    <h2>Description</h2>
+    <p>
+        When <a href="https://www.allrecipes.com/cook/177901">John Chandler</a> submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. 
+    </p>
+    <p>
+        One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. 
+    </p>
+    <p>
+        Unfortunately, John unexpectedly passed away at 53 years old — <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/">read all about his life and legacy here</a>.
+    </p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li> <strong>Meat</strong>: This super meaty lasagna has sweet <em>Italian sausage</em> and <em>lean ground beef</em>.</li>
+            <li><strong>Onion and garlic</strong>: An <em>onion</em> and two cloves of <em>garlic</em> are cooked with the <em>meat</em> to add tons of flavor.</li>
+            <li><strong>Tomato products</strong>: You'll need a can of <em>crushed tomatoes</em>, two cans of <em>tomato sauce</em>, and two cans of <em>tomato paste</em>.</li>
+            <li><strong>Sugar</strong>: Two tablespoons of <em>white sugar</em> add subtle sweetness and enhance the flavor of the sauce.</li>
+            <li><strong>Spices and seasonings</strong>: This lasagna recipe is flavored with <em>fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper </em>.</li>
+            <li><strong>Lasagna noodles</strong>: Use store-bought or <a href="https://www.allrecipes.com/recipe/266023/homemade-lasagna-sheets/"><em>homemade lasagna noodles</em></a>.</li>
+            <li><strong>Cheeses</strong>: <em>Parmesan, mozzarella, and ricotta cheese</em> make this lasagna extra decadent.</li>
+            <li><strong>Egg</strong>: An <em>egg</em> helps bind the <em>ricotta</em> so it doesn't ooze out of the <em>lasagna</em> when you cut into it.</li>
+        </ul>
+        <h2>Steps</h2>
+        <p>
+            Here's a very brief overview of what you can expect when you make homemade lasagna:
+        </p>
+        <ol>
+            <li>Make the <em>meat sauce</em>.</li>
+            <li>Cook the <em>noodles</em>.</li>
+            <li>Make the <em>ricotta mixture</em>.</li>
+            <li>Layer the <em>lasagna</em> according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the <em>lasagna</em> rest before serving.</li>
+        </ol>
+        <h2>How to Layer Lasagna</h2>
+        <p>The detailed layering instructions can be found in the recipe below, but this is the order you'll follow:</p>
+        <ol>
+            <li>Meat sauce</li>
+            <li>Noodles</li>
+            <li>Ricotta mixture</li>
+            <li>Mozzarella slices</li>
+            <li>Meat sauce</li>
+            <li>Parmesan cheese</li>
+            <li>Repeat the layers, then top with the remaining Parmesan</li>
+        </ol>
+        <a href="../index.html">Back to Home Page</a>
 </body>
 </html>
