--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    <img src="https://www.ziprecruiter.com/svc/fotomat/public-ziprecruiter/cms/135705910Chef.jpg" alt="Image of cooking Chef">
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li> 
+        <li><a href="./recipes/caesar-salad.html">Caesar Salad</a></li>
     </ul>
 </body>
 </html>
