Change ordered list <li> structure
It was hard to read so I changed it.

--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -28,12 +28,18 @@
     <ol>
         <li>Gather all ingredients.</li>
 
-        <li>Mince 3 <em>cloves of garlic</em> and place in a small bowl. Add <em>mayonnaise</em>, 2 tablespoons grated <em>Parmesan cheese, anchovies, lemon juice, Worcestershire sauce, and mustard</em>; mix well to combine. Season to taste with <em>salt</em> and <em>black pepper</em>. Refrigerate until ready to use.</li>
+        <li>
+            Mince 3 <em>cloves of garlic</em> and place in a small bowl. Add <em>mayonnaise</em>, 2 tablespoons grated <em>Parmesan cheese, anchovies, lemon juice, Worcestershire sauce, and mustard</em>; mix well to combine. Season to taste with <em>salt</em> and <em>black pepper</em>. Refrigerate until ready to use.
+        </li>
 
-        <li>Heat <em>oil</em> in a large skillet over medium heat. Slice remaining 3 <em>cloves of garlic</em> into quarters and add to hot <em>oil</em>. Cook and stir until brown, then remove <em>garlic</em> from pan. Cook <em>bread</em> cubes in hot flavored <em>oil</em>, turning frequently, until lightly browned; transfer onto a plate and season with <em>salt</em> and <em>pepper</em>.</li>
+        <li>
+            Heat <em>oil</em> in a large skillet over medium heat. Slice remaining 3 <em>cloves of garlic</em> into quarters and add to hot <em>oil</em>. Cook and stir until brown, then remove <em>garlic</em> from pan. Cook <em>bread</em> cubes in hot flavored <em>oil</em>, turning frequently, until lightly browned; transfer onto a plate and season with <em>salt</em> and <em>pepper</em>.
+        </li>
 
-        <li>Place <em>lettuce</em> in a large bowl. Add dressing, remaining <em>Parmesan cheese</em>, and seasoned <em>Parmesan cheese</em> cubes; toss well to coat.</li>
-
+        <li>
+            Place <em>lettuce</em> in a large bowl. Add dressing, remaining <em>Parmesan cheese</em>, and seasoned <em>Parmesan cheese</em> cubes; toss well to coat.
+        </li>
+        
         <li>Serve immediately and enjoy!</li>
     </ol>
     <a href="../index.html">Back to Home Page</a>
