Add link to perfect-prime-rib.html in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li> 
         <li><a href="./recipes/caesar-salad.html">Caesar Salad</a></li>
+        <li><a href="./recipes/perfect-prime-rib.html">Perfect Prime Rib</a></li>
     </ul>
 </body>
 </html>
