Add new .css file,classes and style pages

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home-page">
     <h1>Recipes</h1>
     <img src="https://www.ziprecruiter.com/svc/fotomat/public-ziprecruiter/cms/135705910Chef.jpg" alt="Image of cooking Chef">
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li> 
-        <li><a href="./recipes/caesar-salad.html">Caesar Salad</a></li>
-        <li><a href="./recipes/perfect-prime-rib.html">Perfect Prime Rib</a></li>
-    </ul>
+    <p>
+        <ul class="links">
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li> 
+            <li><a href="./recipes/caesar-salad.html">Caesar Salad</a></li>
+            <li><a href="./recipes/perfect-prime-rib.html">Perfect Prime Rib</a></li>
+        </ul>
+    </p>
 </body>
 </html>
