--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caesar Salad Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="salad-page">
     <h1>Caesar Salad</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8982742.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Caesar Salad">
     <h2>Description</h2>
     <p>This Caesar salad dressing recipe is the best I have ever tasted! <br> It has a wonderful, rich taste thanks to anchovies, garlic, lemon, mustard, and Parmesan. <br>Serve with crusty Italian bread for a delicious meal.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="list">
         <li>6 <em>cloves garlic</em>, peeled, divided</li>
         <li>¾ cup <em>mayonnaise</em></li>
         <li>6 tablespoons grated <em>Parmesan cheese</em>, divided</li>
@@ -25,23 +26,25 @@
         <li>1 head <em>romaine lettuce</em>, torn into bite-sized pieces</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="list">
         <li>Gather all ingredients.</li>
 
         <li>
-            Mince 3 <em>cloves of garlic</em> and place in a small bowl. Add <em>mayonnaise</em>, 2 tablespoons grated <em>Parmesan cheese, anchovies, lemon juice, Worcestershire sauce, and mustard</em>; mix well to combine. Season to taste with <em>salt</em> and <em>black pepper</em>. Refrigerate until ready to use.
+            Mince 3 <em>cloves of garlic</em> and place in a small bowl. <br>Add <em>mayonnaise</em>, 2 tablespoons grated <em>Parmesan cheese, anchovies, <br> lemon juice, Worcestershire sauce, and mustard</em>; mix well to combine. <br> Season to taste with <em>salt</em> and <em>black pepper</em>. Refrigerate until ready to use.
         </li>
 
         <li>
-            Heat <em>oil</em> in a large skillet over medium heat. Slice remaining 3 <em>cloves of garlic</em> into quarters and add to hot <em>oil</em>. Cook and stir until brown, then remove <em>garlic</em> from pan. Cook <em>bread</em> cubes in hot flavored <em>oil</em>, turning frequently, until lightly browned; transfer onto a plate and season with <em>salt</em> and <em>pepper</em>.
+            Heat <em>oil</em> in a large skillet over medium heat. <br> Slice remaining 3 <em>cloves of garlic</em> into quarters and add to hot <em>oil</em>. <br> Cook and stir until brown, then remove <em>garlic</em> from pan. <br> Cook <em>bread</em> cubes in hot flavored <em>oil</em>, turning frequently, until lightly browned; <br> transfer onto a plate and season with <em>salt</em> and <em>pepper</em>.
         </li>
 
         <li>
-            Place <em>lettuce</em> in a large bowl. Add dressing, remaining <em>Parmesan cheese</em>, and seasoned <em>Parmesan cheese</em> cubes; toss well to coat.
+            Place <em>lettuce</em> in a large bowl. <br> Add dressing, remaining <em>Parmesan cheese</em>, <br> and seasoned <em>Parmesan cheese</em> cubes; toss well to coat.
         </li>
         
         <li>Serve immediately and enjoy!</li>
     </ol>
-    <a href="../index.html">Back to Home Page</a>
+    <p>
+        <a class="back" href="../index.html">Back to Home Page</a>
+    </p>
 </body>
 </html>
