--- a/recipes/perfect-prime-rib.html
+++ b/recipes/perfect-prime-rib.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfect Prime Rib</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="rib-page">
     <h1>Perfect Prime Rib</h1>
     <img src="https://www.allrecipes.com/thmb/vfigKejbQRXmaNWT91d3lZ-KOxI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/221958-chef-johns-perfect-prime-rib-235-233b01159c9d45e59c75bac1a8f6283c.jpg" alt="Cooked rib image">
     <h2>Description</h2>
@@ -19,10 +20,10 @@
         You'll cook your room-temperature prime rib at 500 degrees F for exactly that many minutes.<br> (Twenty-seven minutes, in my case.) Then turn off the oven and wait 2 hours without opening the door.<br> When the time's up, remove the prime rib and slice into the most perfectly medium-rare meat you've ever seen.<br> See? That's all it takes to make foolproof prime rib cooked to a perfect pink that's somewhere just a shade under medium rare.<br> Just make sure you're starting with a prime rib that has been brought to room temperature! This is critical in order for the math to work!
     </p>
     <p>
-        Now, while the method could not be easier, there are a couple things that this method requires: a full-size, modern oven with a digital temperature setting that indicates when it is preheated. <br>Older ovens with manual controls can vary greatly, and the doors may not have the proper insulation. <br> Here's another pro tip for you: Because prime rib is expensive, you should always insert a probe-style thermometer to monitor the internal temp of your roast and avoid any chance of over-cooking. <br> Set the probe alarm (125 F for medium-rare) just in case, and pull the prime rib from oven even if there's still time left on the oven timer.
+        Now, while the method could not be easier, there are a couple things that this method requires: <br> a full-size, modern oven with a digital temperature setting that indicates when it is preheated. <br>Older ovens with manual controls can vary greatly, and the doors may not have the proper insulation. <br> Here's another pro tip for you: Because prime rib is expensive, <br> you should always insert a probe-style thermometer to monitor the internal temp of your roast and avoid any chance of over-cooking. <br> Set the probe alarm (125 F for medium-rare) just in case, and pull the prime rib from oven even if there's still time left on the oven timer.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="list">
         <li>1 (4 pound) <em>prime rib roast</em></li>
         <li>¼ cup <em>unsalted butter</em>, softened</li>
         <li>1 tablespoon freshly ground <em>black pepper</em></li>
@@ -30,7 +31,7 @@
         <li>kosher <em>salt</em> to taste</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="list">
         <li>
             Place <em>prime rib roast</em> on a plate and bring to room temperature, 2 to 4 hours.
         </li>
@@ -38,19 +39,21 @@
         <li>Preheat the oven to 500 degrees F (260 degrees C).</li>
 
         <li>
-            Combine <em>butter, pepper, and herbes de Provence</em> in a bowl; mix until well blended. Spread <em>butter mixture</em> evenly over entire <em>roast</em>. Season <em>roast</em> generously with kosher salt.
+            Combine <em>butter, pepper, and herbes de Provence</em> in a bowl; mix until well blended. <br> Spread <em>butter mixture</em> evenly over entire <em>roast</em>. Season <em>roast</em> generously with kosher salt.
         </li>
 
         <li>
-            Roast the 4-pound <em>roast</em> in the preheated oven for 20 minutes. (If your <em>roast</em> is larger or smaller than 4 pounds, multiply the exact weight times 5 minutes.)
+            Roast the 4-pound <em>roast</em> in the preheated oven for 20 minutes. <br> (If your <em>roast</em> is larger or smaller than 4 pounds, multiply the exact weight times 5 minutes.)
         </li>
 
         <li>
-            Turn the oven off and, leaving the <em>roast</em> in the oven with the door closed, let the <em>roast</em> sit in the oven for 2 hours.
+            Turn the oven off and, leaving the <em>roast</em> in the oven with the door closed, <br> let the <em>roast</em> sit in the oven for 2 hours.
         </li>
 
         <li>Remove <em>roast</em> from the oven, slice, and serve.</li>
     </ol>
-    <a href="../index.html">Back to Home Page</a>
+    <p>
+        <a class="back" href="../index.html">Back to Home Page</a>
+    </p>
 </body>
 </html>
