--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="lasagna-page">
     <h1>Lasagna</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167347559762620230110_193320.jpg&q=60&c=sc&orient=true&poi=auto&h=512"alt="Photo of Lasagna">
     <h2>Description</h2>
@@ -19,21 +20,37 @@
         Unfortunately, John unexpectedly passed away at 53 years old — <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/">read all about his life and legacy here</a>.
     </p>
     <h2>Ingredients</h2>
-        <ul>
-            <li> <strong>Meat</strong>: This super meaty lasagna has sweet <em>Italian sausage</em> and <em>lean ground beef</em>.</li>
-            <li><strong>Onion and garlic</strong>: An <em>onion</em> and two cloves of <em>garlic</em> are cooked with the <em>meat</em> to add tons of flavor.</li>
-            <li><strong>Tomato products</strong>: You'll need a can of <em>crushed tomatoes</em>, two cans of <em>tomato sauce</em>, and two cans of <em>tomato paste</em>.</li>
-            <li><strong>Sugar</strong>: Two tablespoons of <em>white sugar</em> add subtle sweetness and enhance the flavor of the sauce.</li>
-            <li><strong>Spices and seasonings</strong>: This lasagna recipe is flavored with <em>fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper </em>.</li>
-            <li><strong>Lasagna noodles</strong>: Use store-bought or <a href="https://www.allrecipes.com/recipe/266023/homemade-lasagna-sheets/"><em>homemade lasagna noodles</em></a>.</li>
-            <li><strong>Cheeses</strong>: <em>Parmesan, mozzarella, and ricotta cheese</em> make this lasagna extra decadent.</li>
-            <li><strong>Egg</strong>: An <em>egg</em> helps bind the <em>ricotta</em> so it doesn't ooze out of the <em>lasagna</em> when you cut into it.</li>
+        <ul class="list las">
+            <li>
+                 <strong>Meat</strong>: This super meaty lasagna has sweet <em>Italian sausage</em> and <em>lean ground beef</em>.
+            </li>
+            <li>
+                <strong>Onion and garlic</strong>: An <em>onion</em> and two cloves of <em>garlic</em> are cooked with the <em>meat</em> to add tons of flavor.
+            </li>
+            <li>
+                <strong>Tomato products</strong>: You'll need a can of <em>crushed tomatoes</em>, two cans of <em>tomato sauce</em>, and <br> two cans of <em>tomato paste</em>.
+            </li>
+            <li>
+                <strong>Sugar</strong>: Two tablespoons of <em>white sugar</em> add subtle sweetness and enhance the flavor of the sauce.
+            </li>
+            <li>
+                <strong>Spices and seasonings</strong>: This lasagna recipe is flavored with <br><em>fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper </em>.
+            </li>
+            <li>
+                <strong>Lasagna noodles</strong>: Use store-bought or <a href="https://www.allrecipes.com/recipe/266023/homemade-lasagna-sheets/"><em>homemade lasagna noodles</em></a>.
+            </li>
+            <li>
+                <strong>Cheeses</strong>: <em>Parmesan, mozzarella, and ricotta cheese</em> make this lasagna extra decadent.
+            </li>
+            <li>
+                <strong>Egg</strong>: An <em>egg</em> helps bind the <em>ricotta</em> so it doesn't ooze out of the <em>lasagna</em> when you cut into it.
+            </li>
         </ul>
         <h2>Steps</h2>
         <p>
             Here's a very brief overview of what you can expect when you make homemade lasagna:
         </p>
-        <ol>
+        <ol class="list">
             <li>Make the <em>meat sauce</em>.</li>
             <li>Cook the <em>noodles</em>.</li>
             <li>Make the <em>ricotta mixture</em>.</li>
@@ -43,7 +60,7 @@
         </ol>
         <h2>How to Layer Lasagna</h2>
         <p>The detailed layering instructions can be found in the recipe below, but this is the order you'll follow:</p>
-        <ol>
+        <ol class="list">
             <li>Meat sauce</li>
             <li>Noodles</li>
             <li>Ricotta mixture</li>
@@ -52,6 +69,8 @@
             <li>Parmesan cheese</li>
             <li>Repeat the layers, then top with the remaining Parmesan</li>
         </ol>
-        <a href="../index.html">Back to Home Page</a>
+        <p>
+        <a class="back" href="../index.html">Back to Home Page</a>
+        </p>
 </body>
 </html>
