Add new borders, margin and padding

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,7 +14,7 @@
         When <a href="https://www.allrecipes.com/cook/177901">John Chandler</a> submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. 
     </p>
     <p>
-        One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. 
+        One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and <br> has ranked among the most popular lasagna recipes on the internet for two decades. 
     </p>
     <p>
         Unfortunately, John unexpectedly passed away at 53 years old — <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/">read all about his life and legacy here</a>.
